Commit new code

--- a/TestProject/App.config
+++ b/TestProject/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="TestProject.Properties.Settings.NorthwindConnectionString"
-            connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Northwind;User ID=sa;Password=12345678"
+            connectionString="Data Source=FVN-PC-IT-09\SQLEXPRESS;Initial Catalog=Northwind;User ID=sa;Password=12345678"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
