--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -88,6 +88,7 @@
     <Reference Include="Web.DemoData.v19.2, Version=19.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cls_EnDeCrypt.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
