--- a/TestProject/Properties/Settings.settings
+++ b/TestProject/Properties/Settings.settings
@@ -5,10 +5,18 @@
     <Setting Name="NorthwindConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Northwind;User ID=sa;Password=12345678&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=FVN-PC-IT-09\SQLEXPRESS;Initial Catalog=Northwind;User ID=sa;Password=12345678&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Northwind;User ID=sa;Password=12345678</Value>
+      <Value Profile="(Default)">Data Source=FVN-PC-IT-09\SQLEXPRESS;Initial Catalog=Northwind;User ID=sa;Password=12345678</Value>
+    </Setting>
+    <Setting Name="ColorMixConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=FVN-PC-IT-09\SQLEXPRESS;Initial Catalog=ColorMix;User ID=sa&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=FVN-PC-IT-09\SQLEXPRESS;Initial Catalog=ColorMix;User ID=sa</Value>
     </Setting>
   </Settings>
 </SettingsFile>
